--- a/styles.css
+++ b/styles.css
@@ -19,11 +19,12 @@ body {
     background-image: url("img/Background.png");
     background-repeat: no-repeat;
     background-size: contain;
-    grid-template-columns: 50% 50%;
 }
 
 .container {
     height: 100vh;
+    display: grid;
+    grid-template-columns: 50% 50% 50%;
 }
 
 .container__botao {
